Try fix issues for safari on iphones

--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -25,7 +25,7 @@ body {
     box-shadow: 0px 0px 14px 3px #00000021;
     display: flex;
     align-items: center;
-    display: none;
+    /* display: none; */
 }
 
 .downloadapp a {
@@ -82,13 +82,11 @@ main {
 }
 
 .app-description h3 {
-    margin: 0;
     color: white;
     margin: 1em;
     max-width: 700px;
     text-align: justify;
     font-weight: 400;
-
 }
 
 .app-description h3:first-of-type {
@@ -98,7 +96,6 @@ main {
 .app-description h3 span {
     font-weight: 700;
     background: linear-gradient(90deg, rgb(221, 108, 255) 0%, rgb(65, 193, 252) 100%);
-    background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
@@ -199,7 +196,11 @@ footer a:first-of-type {
         padding-bottom: 3em;
     }
     .app-description h3 {
-        padding: 1em;
+        text-align: left;
+        height: fit-content;
+        margin: 0.5em;
+        padding: 0;
+        width: 80%;
         font-size: 1em;
     }
     .app-description h3:first-of-type {
